# Mitacs2026_jackal_code

./: .gitignore  CLAUDE.md  README.md  fastdds_udp_only.xml  resumen_jackal_ros2_contexto.txt
.claude/: settings.local.json
.claude/agents/: code-reviewer.md  handoff-documenter.md  isami-architect.md  migration-worker.md  ml-scientific-reviewer.md  plot-gui-builder.md  test-runner.md
.claude/glossary/: GLOSSARY.MD
.claude/hooks/: run_min_checks.ps1
.claude/rules_isami_archive/: isami-constraints.md  language-rules.md  protected-files.md  python-style.md
.claude/skills/handoff-documenter/: SKILL.md
.claude/skills/isami-spatial-validation/: SKILL.md
.claude/skills/ml-code-review/: SKILL.md
.claude/skills/notebook-migration/: SKILL.md
.claude/skills/paper-method-extractor/: SKILL.md
.claude/skills/plot-gui-builder/: SKILL.md
install/: local_setup.sh  setup.sh
log/: latest_build  latest_list
src/jackal_trajectory_control/: LICENSE  README.md  package.xml
src/jackal_trajectory_control/config/: joystick.yaml
src/jackal_trajectory_control/jackal_trajectory_control/: joystick_trajectory_controller.py
src/jackal_trajectory_control_backup/: README.md  package.xml  setup.cfg  setup.py
src/jackal_trajectory_control_backup/docs/: REAL_JACKAL_GUIDE.md
src/jackal_trajectory_control_backup/jackal_trajectory_control/: __init__.py  joystick_trajectory_controller.py  path_generators.py
src/jackal_trajectory_control_backup/launch/: joystick_trajectory.launch.py
src/jackal_trajectory_control_backup/test/: test_paths.py
(+11 files in other folders)
